--- a/test.html
+++ b/test.html
@@ -7,6 +7,9 @@
     <title>111</title>
 </head>
 <body>
-<header></header>
+    <header>
+        <h1></h1>
+    </header>
+    <footer></footer>
 </body>
 </html>
